# ProyectoOrion

./: .env.example  .gitignore  README.md  docs  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/audit_docs_20260604/: index.md  metadata.json  spec.md
conductor/archive/feature_engineering_20260607/: index.md  spec.md
conductor/tracks/audit_docs_20260604/: plan.md
conductor/tracks/feature_engineering_20260607/: metadata.json  plan.md
nba_predictor/: config.py
nba_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nba_predictor/features/: context.py  four_factors.py  pipeline.py  ratings.py  utils.py
nba_predictor/ingestion/: boxscores.py  nba_client.py  schedule.py
nba_predictor/storage/: __init__.py  base.py  local.py
notebooks/: 01_api_exploration.ipynb
scripts/: explore_api.py  ingest_full_history.py  ingest_schedules.py  populate_teams.py  sanity_check_boxscores.py  sanity_check_schedules.py
tests/: test_context_features.py  test_features.py  test_four_factors.py  test_ratings.py
