[project]
name = "nba-predictor"
version = "0.1.0"
description = "NBA game outcome predictor with agentic workflow"
requires-python = ">=3.11,<3.13"
dependencies = [
    "nba-api>=1.4.1",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
cloud = [
    "google-cloud-storage>=2.14.0",
    "google-cloud-bigquery>=3.17.0",
    "google-cloud-bigquery-storage>=2.24.0",
    "db-dtypes>=1.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nba_predictor*"]

[tool.ruff]
line-length = 100
target-version = "py311"